--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
