--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.4",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
