--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "sonner": "^1.3.1",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
